src/test/ui/feature-gates/feature-gate-object_safe_for_dispatch.stderr
error[E0038]: the trait `NonObjectSafe1` cannot be made into an object
  --> $DIR/feature-gate-object_safe_for_dispatch.rs:18:1
   |
LL | fn takes_non_object_safe_ref<T>(obj: &dyn NonObjectSafe1) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `NonObjectSafe1` cannot be made into an object
   |
   = note: the trait cannot require that `Self : Sized`

error[E0038]: the trait `NonObjectSafe2` cannot be made into an object
  --> $DIR/feature-gate-object_safe_for_dispatch.rs:22:1
   |
LL | fn return_non_object_safe_ref() -> &'static dyn NonObjectSafe2 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `NonObjectSafe2` cannot be made into an object
   |
   = note: method `static_fn` has no receiver

error[E0038]: the trait `NonObjectSafe3` cannot be made into an object
  --> $DIR/feature-gate-object_safe_for_dispatch.rs:27:1
   |
LL | fn takes_non_object_safe_box(obj: Box<NonObjectSafe3>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `NonObjectSafe3` cannot be made into an object
   |
   = note: method `foo` has generic type parameters

error[E0038]: the trait `NonObjectSafe4` cannot be made into an object
  --> $DIR/feature-gate-object_safe_for_dispatch.rs:31:1
   |
LL | fn return_non_object_safe_rc() -> std::rc::Rc<NonObjectSafe4> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `NonObjectSafe4` cannot be made into an object
   |
   = note: method `foo` references the `Self` type in its arguments or return type

error[E0038]: the trait `NonObjectSafe1` cannot be made into an object
  --> $DIR/feature-gate-object_safe_for_dispatch.rs:38:6
   |
LL | impl Trait for NonObjectSafe1 {}
   |      ^^^^^ the trait `NonObjectSafe1` cannot be made into an object
   |
   = note: the trait cannot require that `Self : Sized`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0038`.
